feat: secure server using jwt
