# docs/swagger.yaml
@@ -65,6 +65,8 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/controllers.errorResponse'
+      security:
+      - BearerToken: []
       summary: Get available categories
       tags:
       - category
@@ -90,6 +92,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/controllers.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.errorResponse'
+      security:
+      - BearerToken: []
       summary: Create category
       tags:
       - category
@@ -108,4 +116,9 @@ paths:
       - health
 schemes:
 - http
+securityDefinitions:
+  BearerToken:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
